# aptos-move-tools

./: .gitignore  AGENTS.md  Makefile  README.md  bench.sh  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  test-install.yml
aptos-gas-analyzer/: Cargo.toml  README.md
aptos-gas-analyzer/src/: main.rs
move-arg-names/: Cargo.toml
move-arg-names/src/: main.rs
move-bounds-checker/: Cargo.toml  README.md
move-bounds-checker-native/: Cargo.toml  README.md
move-bounds-checker-native/src/: main.rs
move-bounds-checker/src/: main.rs
move-suggest/: Cargo.toml  README.md
move-suggest/src/: main.rs  receiver_style.rs  suggest.rs  vector_literal.rs
move-suggest/tests/: test_suggestions.rs
move1-to-move2/: Cargo.toml  README.md
move1-to-move2/src/: main.rs
move1-to-move2/tests/: test_transforms.rs
named-address-recover/: Cargo.toml  README.md
named-address-recover/src/: main.rs
tools-base/: Cargo.toml  README.md
tools-base/src/: files.rs  lib.rs  parser.rs  source.rs  tree.rs
tools-base/tests/: integration.rs
