[package]
name = "move-bounds-checker"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
tools-base = { path = "../tools-base" }
tree-sitter = "0.26"
tree-sitter-move-on-aptos = { git = "https://github.com/aptos-labs/tree-sitter-move-on-aptos", rev = "12906b341de7cef81cf03d7d91dae51d8a9299e7" }
rayon = "1"
ureq = "3"
regex = "1"
