[package]
name = "tools-base"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Shared base library for aptos-move-tools"

[dependencies]
tree-sitter = "0.26"
tree-sitter-move-on-aptos = { git = "https://github.com/aptos-labs/tree-sitter-move-on-aptos", rev = "12906b341de7cef81cf03d7d91dae51d8a9299e7" }
walkdir = "2"

[features]
default = []
parallel = ["rayon"]

[target.'cfg(any(unix, windows))'.dependencies]
rayon = { version = "1", optional = true }
